--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     Case Problem 2
     
     Save your Fork Sample Recipe
-    Author: 
-    Date:    
+    Author: Adrian GIlder
+    Date:   11-14-18 
 
     Filename: sf_torte.html
    -->
